--- a/go-gin/requirements.yaml
+++ b/go-gin/requirements.yaml
@@ -1,5 +1,4 @@
 dependencies:
   - name: go-gin
-    version: 0.0.2
-    repository: >-
-      http://artifactory-artifactory.tools:8082/artifactory/generic-local/go-gin-dev
+    version: 0.0.3
+    repository: http://artifactory-artifactory.tools:8082/artifactory/generic-local/go-gin-dev
